--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,5 +1,7 @@
 // customize some Bootstrap variables
-$primary: darken(#428bca, 20%);
+$primary: #09b468;
+$secondary: #323b3c;
+$success: #deb887;
 
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
